--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 aiohttp==3.6.2
 async-timeout==3.0.1
 attrs==19.3.0
+beautifulsoup4==4.9.1
+bs4==0.0.1
 certifi==2020.6.20
 cffi==1.14.0
 chardet==3.0.4
@@ -15,9 +17,10 @@ MarkupSafe==1.1.1
 multidict==4.7.6
 pycparser==2.20
 python-telegram-bot==12.8
+requests==2.24.0
 six==1.15.0
+soupsieve==2.0.1
 tornado==6.0.4
 urllib3==1.25.9
 Werkzeug==1.0.1
 yarl==1.4.2
-gunicorn==19.9.0
