--- a/requirements.txt
+++ b/requirements.txt
@@ -13,14 +13,18 @@ Flask==1.1.2
 idna==2.10
 itsdangerous==1.1.0
 Jinja2==2.11.2
+joblib==0.15.1
 MarkupSafe==1.1.1
 multidict==4.7.6
+nltk==3.5
 pycparser==2.20
 python-telegram-bot==12.8
+regex==2020.6.8
 requests==2.24.0
 six==1.15.0
 soupsieve==2.0.1
 tornado==6.0.4
+tqdm==4.47.0
 urllib3==1.25.9
 Werkzeug==1.0.1
 yarl==1.4.2
