--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 aiohttp==3.6.2
+alembic==1.4.2
 async-timeout==3.0.1
 attrs==19.3.0
 beautifulsoup4==4.9.1
@@ -10,19 +11,27 @@ click==7.1.2
 cryptography==2.9.2
 decorator==4.4.2
 Flask==1.1.2
+Flask-Migrate==2.5.3
+Flask-Script==2.0.6
+Flask-SQLAlchemy==2.4.3
 idna==2.10
 itsdangerous==1.1.0
 Jinja2==2.11.2
 joblib==0.15.1
+Mako==1.1.3
 MarkupSafe==1.1.1
 multidict==4.7.6
 nltk==3.5
+psycopg2-binary==2.8.5
 pycparser==2.20
+python-dateutil==2.8.1
+python-editor==1.0.4
 python-telegram-bot==12.8
 regex==2020.6.8
 requests==2.24.0
 six==1.15.0
 soupsieve==2.0.1
+SQLAlchemy==1.3.18
 tornado==6.0.4
 tqdm==4.47.0
 urllib3==1.25.9
