--- a/requirements.txt
+++ b/requirements.txt
@@ -22,6 +22,7 @@ Mako==1.1.3
 MarkupSafe==1.1.1
 multidict==4.7.6
 nltk==3.5
+numpy==1.19.0
 psycopg2-binary==2.8.5
 pycparser==2.20
 python-dateutil==2.8.1
@@ -29,9 +30,12 @@ python-editor==1.0.4
 python-telegram-bot==12.8
 regex==2020.6.8
 requests==2.24.0
+scikit-learn==0.23.1
+scipy==1.5.0
 six==1.15.0
 soupsieve==2.0.1
 SQLAlchemy==1.3.18
+threadpoolctl==2.1.0
 tornado==6.0.4
 tqdm==4.47.0
 urllib3==1.25.9
