--- a/requirements.txt
+++ b/requirements.txt
@@ -23,11 +23,13 @@ MarkupSafe==1.1.1
 multidict==4.7.6
 nltk==3.5
 numpy==1.19.0
+pandas==1.0.5
 psycopg2-binary==2.8.5
 pycparser==2.20
 python-dateutil==2.8.1
 python-editor==1.0.4
 python-telegram-bot==12.8
+pytz==2020.1
 regex==2020.6.8
 requests==2.24.0
 scikit-learn==0.23.1
